[tool.poetry]
name = "pydpu"
version = "0.1.1"
description = "Python library and cli to communicate with DPUs and IPUs"
authors = ["OPI Dev <opi-dev@lists.opiproject.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
isort = "^5.12.0"
bump2version = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
