[tool.poetry]
name = "pydpu"
version = "0.2.1"
description = "Python library and cli to communicate with DPUs and IPUs"
authors = ["OPI Dev <opi-dev@lists.opiproject.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
dpu = "pydpu.cli:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Click = "^8.1"
grpcio = "^1.51.1"
google = "^3.0.0"
google-api-core = "^2.11.0"
redfish = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^7.0.0"
bandit = "^1.7.4"
isort = "^5.12.0"
bump2version = "^1.0.1"
grpcio-tools = "^1.51.1"
mypy-protobuf = "^3.4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
extend_skip = "pydpu/proto"

[tool.black]
extend-exclude = "pydpu/proto"
